# demo_rand_simple

./: Cargo.toml  README.md
data/: Bernoulli.csv  Beta.csv  Cauchy.csv  Chi.csv  ChiSquare.csv  Exponential.csv  FDistribution.csv  Frechet.csv  Gamma.csv  Geometric.csv  Gunbel.csv  HalfCauchy.csv  HalfNormal.csv  InverseGaussian.csv  Laplace.csv  Levy.csv  LogLaplace.csv  LogNormal.csv  Normal.csv  PowerFunction.csv  Rayleigh.csv  ReflectedWeibull.csv  TDistribution.csv  Triangular.csv  Uniform.csv  Weibull.csv
examples/: bernoulli.rs  beta.rs  cauchy.rs  chi.rs  chi_square.rs  common_functions.rs  erlang.rs  exponential.rs  f.rs  frechet.rs  gamma.rs  geometric.rs  gunbel.rs  half_cauchy.rs  half_normal.rs  inverse_gaussian.rs  laplace.rs  levy.rs  log_laplace.rs  log_normal.rs  normal.rs  power_function.rs  rayleigh.rs  reflected_weibull.rs  t.rs  triangular.rs  uniform.rs  weibull.rs
notebooks/: demo.ipynb
